# adventofcode2020

./: .gitignore  .gitmodules  CMakeLists.txt
01/: CMakeLists.txt  main.cpp
02/: CMakeLists.txt  main.cpp
03/: CMakeLists.txt  main.cpp
04/: CMakeLists.txt  main.cpp
cmake/: aoc.cmake
src/: CMakeLists.txt
src/01/: main  main.cpp
src/02/: main.cpp
src/03/: main.cpp
src/04/: main  main.cpp
src/05/: main.cpp
src/06/: main.cpp
src/07/: main.cpp
src/08/: main.cpp
src/09/: main.cpp
